--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
-OPENAI_API_KEY=your_openai_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+GEMINI_API_KEY=AIzaSyDgqzaVMj_jbH9VODBaLnH1yLBnfR6Q4gw
+PICOVOICE_ACCESS_KEY=ngTf/Ijs7meReDNUEUl/tboTxSGUEyJ/B+f5BFwYYONMDFM1zMDFVQ==
+PORCUPINE_KEY=ngTf/Ijs7meReDNUEUl/tboTxSGUEyJ/B+f5BFwYYONMDFM1zMDFVQ==
+ASSISTANT_URL=http://127.0.0.1:5000/assistant
+GEMINI_MODEL_NAME=gemini-1.5-flash
 DISABLE_CAMERA=0         # set 1 to disable camera feed
 CAMERA_INDEX=0           # camera device index if needed
 PORT=5000
+YOLO_MODEL_PATH=yolo11n.pt
+CAMERA_INDEX=0
