--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ Flask>=2.2
 psutil
 python-dotenv
 requests
-opencv-python-headless   # for server w/o GUI; use opencv-python if you need local camera GUI
+opencv-python-headless   # server pe camera/vision use karna ho to
 pyttsx3
 SpeechRecognition
-pyaudio
