Update requirements.txt with new packages
Added additional dependencies for image processing and AI.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Flask>=2.2
 psutil
 python-dotenv
 requests
-opencv-python-headless   # server pe camera/vision use karna ho to
+opencv-python-headless
 pyttsx3
 SpeechRecognition
+ultralytics
+google-generativeai
+pillow
